# ProgAndBot

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 1322e2e91ffc_guildconfig_table_first_approach.py  1dbaa588ad9d_add_language_to_guild_config.py  1e3854a0fe43_change_welcome_channel_id_to_bigint.py  239e9d87d22d_remove_index_from_pk_in_guildconfig.py  28d982570d05_add_welcome_enabled_option.py  709ecbf97ae4_add_polls_message_and_max_limit_to_.py  7c344c331974_correctly_handle_max_string_length.py  93625a54aa8c_add_welcome_message_option.py  cf66be0b63cd_create_userprofile_model.py  e536b4bf797a_add_polls_channel_id_setting.py  f2a819540198_add_polls_message_and_max_limit_to_.py  fd4b2deed44d_create_userprofile_model.py
progandbot/: __main__.py
progandbot/cogs/: guild_join.py  member_join.py  message_tracker.py  moderation.py  polls.py  settings_management.py  twitch_notifier.py  user_info.py  user_utilities.py
progandbot/core/: bot.py  config.py  enums.py  i18n.py  logging_config.py
progandbot/db/: session.py
progandbot/db/models/: __init__.py  guild_config.py  user_profile.py
progandbot/locales/: en.json  es.json
tests/: conftest.py
tests/cogs/: test_message_tracker.py
